--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,12 @@ dependencies {
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.12.2"
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.mockito:mockito-core:3.3.3"
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.4'
+    testImplementation "androidx.test:core-ktx:1.3.0"
+    testImplementation "org.robolectric:robolectric:4.2.1"
+    testImplementation "androidx.test.ext:junit-ktx:1.1.2"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
